--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -31,6 +31,7 @@
 .notifications-page-main .notifications-space .notification .informations .description .user-name,
 .notifications-page-main .notifications-space .notification .informations .description .post-name,
 .notifications-page-main .notifications-space .notification .informations .description .group-name {
+    font-weight: 800;
     cursor: pointer;
 }
 
@@ -65,7 +66,11 @@
     margin: 0 0 0 auto;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 768px) {
+    .notifications-page-main {
+        min-height: 100vh;
+    }
+
     .notifications-page-main .notifications-space .notification {
         gap: 12px;
     }
