Updates to components and styles. New functionality! You can now click on a new notification to mark it as read. New animation! You will now see an animation on notifications when you hover over them. Fixes! Creation of the newNotificationsCount variable in App.js to store a value frequently used by the component, the application will not show a badge if the number of new notifications is zero, change the tag of the new-notifications-number class element from p to span, etc.

--- a/src/components/Notification/Notification.css
+++ b/src/components/Notification/Notification.css
@@ -4,10 +4,17 @@
     gap: 18px;
     padding: 15px;
     border-radius: 8px;
+    transition: all .2s ease-in-out;
+}
+
+.notifications-page-main .notifications-space .notification:hover {
+    -webkit-transform: scale(1.04);
+    transform: scale(1.04);
 }
 
 .notifications-page-main .notifications-space .notification.new {
     background-color: hsl(210, 60%, 98%);
+    cursor: pointer;
 }
 
 .notifications-page-main .notifications-space .notification img {
@@ -32,7 +39,6 @@
 .notifications-page-main .notifications-space .notification .informations .description .post-name,
 .notifications-page-main .notifications-space .notification .informations .description .group-name {
     font-weight: 800;
-    cursor: pointer;
 }
 
 .notifications-page-main .notifications-space .notification .informations .description .user-name:hover,
@@ -53,9 +59,8 @@
 .notifications-page-main .notifications-space .notification .informations .private-message {
     color: hsl(219, 12%, 42%);
     padding: 12px 20px;
-    border: 1px solid hsl(205, 33%, 90%);
+    border: 1px solid hsl(211, 68%, 94%);
     border-radius: 5px;
-    cursor: pointer;
 }
 
 .notifications-page-main .notifications-space .notification .informations .private-message:hover {
